0.02
 - Improve SEE ALSO section in doc.
 - Update Module::Install to 1.16 version.

0.01 2015-04-05T00:25:48+02:00
 - First version.