@@ -1,6 +1,8 @@
 Changes
 examples/ex1.pl
 inc/Module/Install.pm
+inc/Module/Install/AuthorRequires.pm
+inc/Module/Install/AuthorTests.pm
 inc/Module/Install/Base.pm
 inc/Module/Install/Can.pm
 inc/Module/Install/Fetch.pm
@@ -30,13 +32,13 @@ t/data/tag1.pyx
 t/data/tag2.pyx
 t/data/tag3.pyx
 t/data/tag4.pyx
-t/PYX-SGML-Raw/00-use.t
-t/PYX-SGML-Raw/01-version.t
-t/PYX-SGML-Raw/02-pod_coverage.t
-t/PYX-SGML-Raw/03-pod.t
-t/PYX-SGML-Raw/04-char.t
-t/PYX-SGML-Raw/05-start_tag.t
-t/PYX-SGML-Raw/06-end_tag.t
-t/PYX-SGML-Raw/07-instruction.t
-t/PYX-SGML-Raw/08-comment.t
-t/PYX-SGML-Raw/09-tag.t
+t/PYX-SGML-Raw/01-use.t
+t/PYX-SGML-Raw/02-version.t
+t/PYX-SGML-Raw/03-char.t
+t/PYX-SGML-Raw/04-start_tag.t
+t/PYX-SGML-Raw/05-end_tag.t
+t/PYX-SGML-Raw/06-instruction.t
+t/PYX-SGML-Raw/07-comment.t
+t/PYX-SGML-Raw/08-tag.t
+xt/PYX-SGML-Raw/01-pod_coverage.t
+xt/PYX-SGML-Raw/02-pod.t
