@@ -3,14 +3,11 @@ abstract: 'Processing PYX data or file and write as SGML.'
 author:
   - 'Michal Spacek <skim@cpan.org>'
 build_requires:
-  English: 0
   ExtUtils::MakeMaker: 6.36
   File::Object: 0.07
   Test::More: 0
   Test::NoWarnings: 0
   Test::Output: 1.02
-  Test::Pod: 0
-  Test::Pod::Coverage: 0
 configure_requires:
   ExtUtils::MakeMaker: 6.36
 distribution_type: module
@@ -26,6 +23,7 @@ no_index:
     - examples
     - inc
     - t
+    - xt
 requires:
   Class::Utils: 0.05
   PYX::Parser: 0.01
